Implemented support for output file == input file in ZipFilterWriter (IDML and openoffice).
git-svn-id: https://okapi.googlecode.com/svn/trunk@1154 0cd2bb99-014b-0410-b875-5d0485b745ed